--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -7,9 +7,17 @@
     <link rel="stylesheet" href="0-styles.css">
 </head>
 <body>
-<header>
-    <div>
-        <div
+<header class="header">
+    <div class="container">
+        <div class="logo">Headphones</div>
+        <div>
+            <nav class="nav">               
+                    <a href="#home">Home</a>
+                    <a href="#features">Features</a>
+                    <a href="#pricing">Pricing</a>
+                    <a href="#contact">Contact</a>             
+            </nav>
+        </div>
     </div>
 </header>
 </body>
