--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
       <div class="logo"><img src="images/logo_headphones.png" alt=""></div>
       <ul class="nav-links">
-        <li><a href="#">what we do</a></li>
+        <li><a href="1-index.html">what we do</a></li>
         <li><a href="#">our results</a></li>
         <li><a href="#">contact us</a></li>
       </ul>
