Add features section with icons and styles to the Headphones landing page

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -27,5 +27,39 @@
       </p>
     </div>
   </header>
+  <section class="section">
+    <h2>What we do...</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    
+    <div class="features">
+      <div class="feature">
+        <!-- Sound wave icon -->
+        <svg viewBox="0 0 24 24"><path d="M2 12h2v4H2v-4zm4-4h2v8H6V8zm4-6h2v20h-2V2zm4 4h2v12h-2V6zm4 4h2v4h-2v-4z"/></svg>
+        <h3>Lorem ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+
+      <div class="feature">
+        <!-- Clapperboard icon -->
+        <svg viewBox="0 0 24 24"><path d="M4 4h16v16H4V4zm14 14V10H6v8h12zm0-10V6H6v2h12z"/></svg>
+        <h3>Lorem ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+
+      <div class="feature">
+        <!-- Music note icon -->
+        <svg viewBox="0 0 24 24"><path d="M12 3v10.55A4 4 0 1014 17V7h4V3h-6z"/></svg>
+        <h3>Lorem ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+
+      <div class="feature">
+        <!-- Ear icon -->
+        <svg viewBox="0 0 24 24"><path d="M12 3a9 9 0 00-9 9c0 2.2.9 4.2 2.4 5.6L8 15a6 6 0 118.5 1.7l-1.4-1.4A4 4 0 1012 7v5.6l2.8 2.8a1 1 0 01-1.4 1.4l-3.2-3.2A1 1 0 0110 13V7a2 2 0 114 0"/></svg>
+        <h3>Lorem ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
