Add results section with statistics and styles to the Headphones landing page

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -13,7 +13,7 @@
       <div class="logo"><img src="images/logo_headphones.png" alt=""></div>
       <ul class="nav-links">
         <li><a href="1-index.html">what we do</a></li>
-        <li><a href="#">our results</a></li>
+        <li><a href="2-index.html">our results</a></li>
         <li><a href="#">contact us</a></li>
       </ul>
     </nav>
